[project]
name = "mitre-attack-mcp"
version = "0.1.0"
description = "MITRE ATT&CK MCP server for technique lookups and kill chain mapping"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.1",
    "mcp>=1.23.0",
    "uvicorn>=0.34.0",
    "starlette>=0.41.0",
    "httpx>=0.28.1,<1.0",
    "mitreattack-python>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
